# ArquiSys_Al

./: .env.example  .gitignore  README.md  README_CLOUD.md  agenteia  index.html  ollama_colab.ipynb  pyproject.toml  session-ses_2385.md  session_chat.md  sprin 1.docx
docs/: Guia_Explicativa_Sprint_2_Para_Exposicion_20260427.docx  Guia_Tecnica_Librerias_y_Codigo_Sprint_2_20260427.docx  Informe_Sprint_2_ArquiSys_AI.docx  Informe_Sprint_2_ArquiSys_AI_Detallado.docx  app.js  index.html  styles.css
docs/sprints/: sprint_02.md
scripts/: generate_sprint2_companion_docs.py  generate_sprint2_report_docx.py  run_local.py  ui_app.py  update_ngrok.sh
src/arquisys_ai/: __init__.py
src/arquisys_ai/agents/: analyst_agent.py  architect_agent.py
src/arquisys_ai/config/: settings.py
src/arquisys_ai/core/: __init__.py  models.py
src/arquisys_ai/generators/: __init__.py
src/arquisys_ai/generators/mermaid/: __init__.py  c4_container_generator.py  c4_context_generator.py  class_generator.py  er_generator.py  flow_generator.py  sequence_generator.py  use_case_generator.py
src/arquisys_ai/generators/plantuml/: __init__.py  c4_container_generator.py  c4_context_generator.py  class_generator.py  common.py  er_generator.py  flow_generator.py  sequence_generator.py  use_case_generator.py
src/arquisys_ai/generators/text/: __init__.py  (+2 more)
src/arquisys_ai/graph/: state.py  workflow.py
src/arquisys_ai/services/: llm_client.py
src/arquisys_ai/utils/: text.py
tests/integration/: test_analyst_architect_flow.py
tests/unit/: test_analyst_agent.py  test_architect_agent.py
(+4 files in other folders)
